@@ -132,6 +132,8 @@ that sucessive points are as near to each other as possible.
 slices in an array of small panels.
 <LI><B>XYZ</B>:&emsp;Open an XYZ slice viewing window.
 <LI><B>Slicer</B>:&emsp;Open window showing a sliced view of the image data.&emsp;[\]
+<LI><B>Linked Slicers</B>:&emsp;Open one slicer per image file, each locked to
+  one file, with a single slice control toolbar to control them all.
 <LI><B>Model View</B>:&emsp;Open a 3dmod model view (3dmodv) window.&emsp;[v]
 <LI><B>Pixel View</B>:&emsp;View pixel values in a grid.
 <LI><B>Graph</B>:&emsp;Open the Image Graph window.&emsp;[G]
